2004-05-12  Matthias Clasen  <mclasen@redhat.com>

	* tests/testtreeedit.c: Add a progress column.

	* gtk/Makefile.am: Add gtkcellrendererprogress.[hc] in the right
	places.

	* gtk/gtk.h: Include gtkcellrendererprogress.h.

	* gtk/gtkcellrendererprogress.[hc]: A progress cell renderer,
	based on the one found in Epiphany.

2004-05-11  Michael Natterer  <mitch@gimp.org>

	* gtk/gtkcombobox.c (gtk_combo_box_popup)
	(gtk_combo_box_menu_button_press): don't allocate the popup
	smaller than the combobox. Fixes bug #59660.

2004-05-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_get_widget): Revert the
	previous change to this function, clarify the docs instead.

	* gtk/gtkcombobox.c (gtk_combo_box_list_setup): Use
	GTK_SELECTION_BROWSE.

	* gtk/gtktreeview.c: Make hover selection work for 
	GTK_SELECTION_BROWSE as well.

Tue May 11 00:38:25 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellrenderertoggle.c (gtk_cell_renderer_toggle_class_init): 
	Document the ::toggled signal.

Mon May 10 23:04:25 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkwidget.h: Add prototype for _gtk_widget_grab_notify()

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c (get_screen_icon_info): Make static.

	* gdk/gdkdisplay.c (singlehead_...): 
	* gdk/x11/gdkkeys-x11.c (get_effective_keymap): 
	* gdk/x11/gdkgeometry-x11.c (expose_serial_predicate): 
	* gdk/x11/gdkdisplay-x11.c (escape_for_xmessage): Make static.

	* gtk/gtktreeview.c (gtk_tree_view_set_fixed_height_mode): Add a 
	note about COLUMN_FIXED restriction.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_list_button_press): 
	Set the entry in the default handler of the ::match-selected signal.
	(#137226)

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position_below): If we don't
	do the move-selected-item below pointer thingie, do the 
	place-below-or-above one.

	* tests/testentrycompletion.c: Make the second example use the 